--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Added favicon -->
-    <link rel="icon" href="/lovable-uploads/a6e0b97c-98e4-46fd-bb8d-0ef459a48468.png" type="image/png">
+    <link rel="icon" href="/logo/lots-media-co.png" type="image/png">
   </head>
 
   <body>
