--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOTS Media - Designs that speak. Stories that connect.</title>
     <meta name="description" content="LOTS Media - Professional graphic design services specializing in social media design, branding, and content visuals." />
+    <meta name="keywords" content="LOTS Media, graphic design, branding, web design, social media design, creative studio, digital media, UI UX" />
     <meta name="author" content="LOTS Media" />
 
     <meta property="og:title" content="LOTS Media - Designs that speak. Stories that connect." />
     <meta property="og:description" content="LOTS Media - Professional graphic design services specializing in social media design, branding, and content visuals." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://drive.google.com/file/d/1cd9tLer9ZORwS5HY92Q5zy6hR2l93kt7/view?usp=sharing" />
+    <meta property="og:url" content="https://www.lotsmediaco.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="LOTS Media" />
+    <meta name="twitter:description" content="LOTS Media - Professional graphic design services specializing in social media design, branding, and content visuals." />
+    <meta name="twitter:site" content="@lotsmediaco" />
+    <meta name="twitter:image" content="https://drive.google.com/file/d/1cd9tLer9ZORwS5HY92Q5zy6hR2l93kt7/view?usp=sharing" />
     
     <!-- Added favicon -->
     <link rel="icon" href="/logo/lots-media-co.png" type="image/png">
+
+    <!-- ✅ Canonical URL (important for avoiding SEO duplication) -->
+    <link rel="canonical" href="https://www.lotsmediaco.com" />
   </head>
 
   <body>
